k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gandalf-web
  labels:
    app: gandalf-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gandalf-web
  template:
    metadata:
      labels:
        app: gandalf-web
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: web
          image: fumnanya92/gandalf-web:latest
          ports:
            - containerPort: 80
