k8s/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: monitoring
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
