k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gandalf-web
  labels:
    app: gandalf-web
spec:
  type: NodePort
  selector:
    app: gandalf-web
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080  # explicitly bind to 30080
